minor fixin spacing at projects page and links color behaivour

--- a/src/assets/sass/containers/projects/_projects.scss
+++ b/src/assets/sass/containers/projects/_projects.scss
@@ -26,6 +26,8 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        justify-content: space-between;
+        gap: 2%;
         max-width: 100vw;
         .header-section{
             width: 30%;
